@@ -7,6 +7,7 @@ Revision history for Catalyst-Controller-Combine
           Now, trying to access files outside the wanted directories simply 
           let the Controller die.
         * added a test to verify this.
+        * simplified epire header handling.
           
 0.11    2010-03-23
         * fixed a bug that wrongly compared paths during test
